validate body
