# backend/pkg/api/journeys.go
@@ -2,11 +2,14 @@ package api
 
 import (
 	"citybike/pkg/db"
+	"citybike/pkg/types"
 	"encoding/json"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/go-chi/chi/v5"
+	"github.com/go-playground/validator/v10"
 )
 
 const PAGE_LIMIT int = 10
@@ -14,6 +17,7 @@ const PAGE_LIMIT int = 10
 func handleJourneys(r chi.Router) {
 	r.Get("/page/{page}", getJourneys)
 	r.Get("/page/{page}/{sort}", getJourneys)
+	r.Post("/", addJourney)
 }
 
 // @Summary Get journeys by page.
@@ -57,4 +61,50 @@ func getJourneys(w http.ResponseWriter, r *http.Request) {
 
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(journeys)
+}
+
+// @Summary Add new journey.
+// @Description POST api/journeys to add new journey.
+// @Tags Journeys
+// @Produce json
+// @Router /api/journeys [post]
+// @Param   addJourneyRequest body types.JourneyRequest true "New journey"
+// @Success 200 {object} types.JSONResponse
+// @Failure 400 {object} types.JSONResponse
+// @Failure 500 {object} types.JSONResponse
+func addJourney(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Access-Control-Allow-Origin", "*")
+	w.Header().Set("Content-Type", "application/json")
+
+	var journey types.JourneyRequest
+
+	dec := json.NewDecoder(r.Body)
+	dec.DisallowUnknownFields()
+
+	err := dec.Decode(&journey)
+	if err != nil {
+		sendJSONResponse("Invalid body", http.StatusBadRequest, w)
+		return
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(journey); err != nil {
+		sendJSONResponse(err.Error(), http.StatusBadRequest, w)
+		return
+	}
+
+	_, err = time.Parse(time.RFC3339, journey.DepTime+"Z")
+	if err != nil {
+		sendJSONResponse(err.Error(), http.StatusBadRequest, w)
+		return
+	}
+	_, err = time.Parse(time.RFC3339, journey.RetTime+"Z")
+	if err != nil {
+		sendJSONResponse(err.Error(), http.StatusBadRequest, w)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	// sendJSONResponse("Station added succesfully!", http.StatusOK, w)
+	json.NewEncoder(w).Encode(journey)
 }
